--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,9 +16,12 @@ layout: compress
                         {{page.title}}
                     </h1>
                     <hr class="has-background-black">
-                    <div class="content is-marginless">
-                        {{ content }}
+                    <div class="content has-text-justified-desktop has-text-justified-fullhd has-text-justified has-text-justified-tablet has-text-left-mobile">
+                        <p>{{ content }}</p>
                     </div>
+                    <!-- <div class="content is-marginless">
+                        {{ content }}
+                    </div> -->
                 </div>
             </div>
         </div>
