added publications to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
             <div class="column has-text-white">
                 <h3>More Links</h3>
                 {% for sitepage in site.html_pages %}
-                {% unless sitepage.url == '/' or sitepage.url == '/404' or sitepage.url == '/blog' or sitepage.url == '/publications' or sitepage.url == '/project' %}
+                {% unless sitepage.url == '/' or sitepage.url == '/404' or sitepage.url == '/blog' or sitepage.url == '/project' %}
                 <li>
                     <a href="{{sitepage.url | absolute_url}}">{{sitepage.title}}</a>
                 </li>
